footer, scrollbar, bugfixes

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -15679,14 +15679,20 @@ section.contact ul.list-social li.social-google-plus a:hover {
 }
 
 footer {
-  padding: 25px 0;
+  padding-top: 10px;
   text-align: center;
-  color: rgba(255, 255, 255, 0.3);
+  color: rgba(255, 255, 255, 0.7);
   background-color: #222222;
 }
 
+footer h3 {
+  color: #0894d1;
+  letter-spacing: 1px;
+  margin: 30px 0 20px;
+}
+
 footer p {
-  font-size: 12px;
+  font-size: 0.8rem;
   margin: 0;
 }
 
@@ -15695,12 +15701,27 @@ footer ul {
 }
 
 footer ul li a {
-  font-size: 12px;
-  color: rgba(255, 255, 255, 0.3);
+  font-size: 1rem;
+  color: rgba(255, 255, 255, 0.7);
 }
 
 footer ul li a:hover, footer ul li a:focus, footer ul li a:active, footer ul li a.active {
   text-decoration: none;
+}
+
+footer .list-group-item {
+  background-color: #222222;
+}
+
+footer .copyright {
+  padding: 15px 0;
+  background: #333;
+  margin-top: 20px;
+  font-size: 15px;
+}
+
+footer .copyright span {
+  color: #0894d1;
 }
 
 .bg-primary {
@@ -15853,4 +15874,23 @@ header.game-header {
 
 .cc-link {
   display: none;
+}
+
+::-webkit-scrollbar {
+  width: 11px;
+}
+
+::-webkit-scrollbar-track {
+  border-radius: 10px;
+  background: white;
+}
+
+::-webkit-scrollbar-thumb {
+  border: 1px solid white;
+  border-radius: 10px;
+  background-color: #CCCCCC;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #BBBBBB;
 }
